--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "globals": "^16.5.0"
   }
 }
