--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.3.1",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "slugify": "^1.6.6"
   },
