--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "slugify": "^1.6.6"
+    "sharp": "^0.34.5",
+    "slugify": "^1.6.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
