--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
